--- a/project2/digestion.css
+++ b/project2/digestion.css
@@ -119,3 +119,80 @@ background: rgb(256, 249, 178);
 body{
     cursor: url("/Users/liang/Desktop/personal_archive/project2/cherry.png"), auto;
 }
+
+.circle{
+    width: 100px;
+    height: 100px;
+    border: solid 5px;
+    border-color: black;
+    border-radius: 50%;
+    background-color: red;
+    
+}
+
+.stick{
+   width: 10px;
+   height: 50px;
+   background-color: green;
+   position: relative;
+   bottom: 130px;
+   left: 50px;
+   
+}
+
+.testfruit{
+   animation: move 10s ease;
+}
+
+@keyframes move{
+    0% { transform: translateX(0px); }
+    25% { transform: translateY(-500px);}
+    50% { transform: translate(1000px, -1000px);}
+    100% { transform: translateX(500px);}
+}
+
+.testbox1{
+    width: 50px;
+    height: 100px;
+    background-color: red;
+   display: none;
+}
+
+
+
+
+
+
+
+.testbox2{
+    width: 50px;
+    height: 100px;
+    background-color: red;
+    position: relative;
+    left: 55px;
+    bottom:100px;
+    display: none;
+  
+}
+
+
+
+
+
+.testbox3{
+    width: 50px;
+    height: 100px;
+    background-color: red;
+    position: relative;
+    left: 110px;
+    bottom: 200px;
+    display: none;
+}
+
+
+
+
+
+
+
+
