--- a/project2/digestion.css
+++ b/project2/digestion.css
@@ -156,6 +156,9 @@ body{
     height: 100px;
     background-color: red;
    display: none;
+   position: absolute;
+   top: 20px;
+   left:20px;
 }
 
 
