--- a/project2/project2.css
+++ b/project2/project2.css
@@ -1,8 +1,91 @@
-.icecream1{
-   width: 50px;
-   height: 10px;
-   background: blue;
-   position: absolute;
-   top: 10px;
-   left: 10px;
+body{
+  background-color: rgba(230 ,248, 166, .5);
 }
+
+.icecream1{
+  width: 100px;
+  height: 20px;
+  background: linear-gradient(to bottom right, white, rgb(9, 225, 244), rgb(37, 46, 233)); 
+  position: absolute;
+  top: 120px;
+  left: 20px;
+  border-radius: 10px;
+}
+
+.icecream2{
+  width: 80px;
+  height: 20px;
+  background: linear-gradient(to bottom right, white, rgb(9, 225, 244), rgb(37, 46, 233)); 
+  position: absolute;
+  top: 90px;
+  left: 30px;
+  border-radius: 10px;
+}
+
+.icecream3{
+  width: 60px;
+  height: 20px;
+  background: linear-gradient(to bottom right, white, rgb(9, 225, 244), rgb(37, 46, 233)); 
+  position: absolute;
+  top: 60px;
+  left: 40px;
+  border-radius: 10px;
+}
+
+.icecream4{
+	width: 0;
+    height: 0;
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    border-bottom: 30px solid rgb(9, 225, 244);
+    position: absolute;
+    left: 55px;
+    top:20px;
+}
+				
+
+.icecream5{
+  width: 100px;
+  height: 20px;
+  background: linear-gradient(to bottom right, white, rgb(9, 225, 244), rgb(37, 46, 233)); 
+  position: absolute;
+  top: 120px;
+  left: 125px;
+  border-radius: 10px;
+}
+
+.icecream6{
+  width: 80px;
+  height: 20px;
+  background: linear-gradient(to bottom right, white, rgb(9, 225, 244), rgb(37, 46, 233)); 
+  position: absolute;
+  top: 90px;
+  left: 135px;
+  border-radius: 10px;
+}
+
+.icecream7{
+  width: 60px;
+  height: 20px;
+  background: linear-gradient(to bottom right, white, rgb(9, 225, 244), rgb(37, 46, 233)); 
+  position: absolute;
+  top: 60px;
+  left: 145px;
+  border-radius: 10px;
+}
+
+.icecream8{
+	width: 0;
+    height: 0;
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    border-bottom: 30px solid rgb(9, 225, 244);
+    position: absolute;
+    left: 160px;
+    top:20px;
+}
+
+
+
+
+
