--- a/project2/project2.css
+++ b/project2/project2.css
@@ -2,10 +2,42 @@ body{
   background-color: rgba(230 ,248, 166, .5);
 }
 
+.circle{
+  height: 20px;
+  width: 20px;
+  border-radius: 100%;
+  background: red;
+}
+
+.stick{
+  height: 10px;
+  width: 2px;
+  background: green;
+  position: relative;
+  left:18px;
+  bottom:23px;
+  transform: rotate(45deg);
+}
+
+.cherry{
+  position: absolute;
+  left: 167px;
+  top:15px;
+  z-index: 2;
+  animation: move 2s ease;
+  animation-delay: 2s;
+}
+
+@keyframes move{
+    0% { transform: translateX(0px); }
+    100% { transform: translateX(125px);}
+}
+
+
 .icecream1{
   width: 100px;
   height: 20px;
-  background: linear-gradient(to bottom right, white, rgb(9, 225, 244), rgb(37, 46, 233)); 
+  background: rgb(9, 225, 244);
   position: absolute;
   top: 120px;
   left: 20px;
@@ -15,7 +47,7 @@ body{
 .icecream2{
   width: 80px;
   height: 20px;
-  background: linear-gradient(to bottom right, white, rgb(9, 225, 244), rgb(37, 46, 233)); 
+  background:  rgb(9, 225, 244); 
   position: absolute;
   top: 90px;
   left: 30px;
@@ -25,7 +57,7 @@ body{
 .icecream3{
   width: 60px;
   height: 20px;
-  background: linear-gradient(to bottom right, white, rgb(9, 225, 244), rgb(37, 46, 233)); 
+  background: rgb(9, 225, 244); 
   position: absolute;
   top: 60px;
   left: 40px;
@@ -47,7 +79,7 @@ body{
 .icecream5{
   width: 100px;
   height: 20px;
-  background: linear-gradient(to bottom right, white, rgb(9, 225, 244), rgb(37, 46, 233)); 
+  background: rgb(9, 225, 244); 
   position: absolute;
   top: 120px;
   left: 125px;
@@ -57,7 +89,7 @@ body{
 .icecream6{
   width: 80px;
   height: 20px;
-  background: linear-gradient(to bottom right, white, rgb(9, 225, 244), rgb(37, 46, 233)); 
+  background: rgb(9, 225, 244); 
   position: absolute;
   top: 90px;
   left: 135px;
@@ -67,7 +99,7 @@ body{
 .icecream7{
   width: 60px;
   height: 20px;
-  background: linear-gradient(to bottom right, white, rgb(9, 225, 244), rgb(37, 46, 233)); 
+  background: rgb(9, 225, 244); 
   position: absolute;
   top: 60px;
   left: 145px;
@@ -83,6 +115,111 @@ body{
     position: absolute;
     left: 160px;
     top:20px;
+}
+
+.fork{
+    display: none;
+}
+
+.knife{
+    display: none;
+}
+
+.spoon{
+    display: none;
+}
+
+
+.tableware1{
+   width: 8px;
+   height: 100px;
+   background-color: grey;
+   position: absolute;
+   left: 270px;
+   top: 45px;
+   transform: rotate(27deg)
+}
+
+.tableware2{
+    width: 0;
+	height: 0;
+	border-left: 15px solid transparent;
+	border-right: 15px solid transparent;
+	border-top: 35px solid grey;
+	transform: rotate(27deg);
+    position: absolute;
+    left: 278px;
+    top: 40px;
+}
+
+.tableware3{
+    width: 5px;
+    height: 25px;
+    background: grey;
+    transform: rotate(27deg);
+    position: absolute;
+    left: 293px;
+    top: 14px;
+}
+
+.tableware4{
+    width: 5px;
+    height: 25px;
+    background: grey;
+    transform: rotate(27deg);
+    position: absolute;
+    left: 303px;
+    top: 18px;
+}
+
+.tableware5{
+    width: 5px;
+    height: 25px;
+    background: grey;
+    transform: rotate(27deg);
+    position: absolute;
+    left: 314px;
+    top: 23px;
+}
+
+.tableware6{
+    width: 8px;
+    height: 80px;
+    background: grey;
+    position: absolute;
+    left: 350px;
+    top: 65px;
+    transform: rotate(-27deg);
+}
+
+.tableware7{
+    width: 16px;
+    height:70px;
+    background: grey;
+    border-radius: 100% 0 0 100%;
+    position: absolute;
+    left: 312px;
+    top: 11px;
+    transform:rotate(-27deg);
+}
+
+.tableware8{
+   width: 75px;
+   height: 9px;
+   background: grey;
+   position: absolute;
+   left: 250px;
+   top: 100px;
+}
+
+.tableware9{
+  width: 50px;
+  height: 28px;
+  background: grey;
+  border-radius: 100%;
+  position: absolute;
+  left: 320px;
+  top: 90px;
 }
 
 
